--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta 
+    name="viewport" 
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+  />
   <title>MatMniam — Dodawanie i Odejmowanie do 300</title>
   <meta name="description" content="Prosta gra do nauki dodawania i odejmowania dla dzieci. Zakres do 300, poziomy trudności, triki i wizualizacje." />
   <style>
@@ -628,3 +631,4 @@
   </script>
 </body>
 </html>
+
